2012-07-10  Iain Buclaw  <ibuclaw@ubuntu.com>

	* Make-lang.in: Remove unused borrowed objects.
	* d-builtins2.cc(d_bi_builtin_func): Don't add builtin if
	-fno-builtin was given.
	* d-codegen.cc(IRState::emitTemplates): Remove static declaration.
	(IRState::splitDynArrayVarArgs): Likewise.
	(IRState::useInlineAsm): Likewise.
	(IRState::useBuiltins): Likewise.
	(d_gcc_force_templates): Update to use global gen.
	* d-codegen.h(emitTemplates): Remove static attribute.
	(splitDynArrayVarArgs): Likewise.
	(useBuiltins): Likewise.
	(useInlineAsm): Remove member.
	(stdInc): Define new member.
	* d-incpath.cc(std_inc): Remove global.
	(add_import_paths): Update function signature.
	* d-lang.cc(d_init_options): Default splitDynArrayVarArgs to false.
	(d_init): Update call to add_import_paths.
	(d_handle_option): Remove OPT_fd_inline_asm, add
	OPT_fsplit_dynamic_arrays.
	* lang.opt: Likewise.

2012-07-08  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-builtins2.cc(d_gcc_type_align): Update function signature. Use
	type align size to determine the known align size of a decl.
	* d-dmd-gcc.h(d_gcc_type_align): Update function signature.
	* symbol.h(Symbol): New member, Salignment.
	* symbol.cc(Symbol::Symbol): Initialise Salignment.
	* d-decls.cc(VarDeclaration::toSymbol): Set Salignment if there is an
	alignment in effect on the decl.
	(AggregateDeclaration::toInitializer): Likewise.
	* d-objfile.cc(ObjectFile::outputStaticSymbol): Set DECL_ALIGN if
	Salignment was given for static decl.

2012-07-07  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-builtins2.cc(d_gcc_magic_builtins_module): Add check for
	DECL_ASSEMBLER_NAME_SET_P when testing for builtins that can be
	markable as pure in the D frontend.

	* d-codegen.cc(IRState::integerConstant): Hide use of
	HOST_BITS_PER_WIDE_INT macros.
	(IRState::hwi2toli): Likewise.
	(IRState::getTargetSizeConst): Likewise.

	* d-builtins.c(d_global_trees): Move declaration here.
	(lookup_C_type_name): Rename to lookup_ctype_name.