@@ -80,6 +80,9 @@ extern GTY(()) tree d_eh_personality_decl;
 /* True if a custom static chain has been set-up for function.  */
 #define D_DECL_STATIC_CHAIN(NODE) (DECL_LANG_FLAG_3 (FUNCTION_DECL_CHECK (NODE)))
 
+/* True if the symbol is an in/out contract.  */
+#define D_DECL_IS_CONTRACT(NODE) (DECL_LANG_FLAG_4 (FUNCTION_DECL_CHECK (NODE)))
+
 /* The D front-end does not use the 'binding level' system for a symbol table,
    It is only needed to get debugging information for local variables and
    otherwise support the backend. */
